Changed: Moved Post Options menu to right hand side. Fixed: Menu not displaying on IE because attachEvent was catching the click to show the menu and hiding it immediatly. Fixed: Menu not resizing correctly on IE because scrollHeight and scrollWidth weren't updating quick enough. Added: Images for the quoting and such like.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -1170,13 +1170,15 @@ a {
     background-color: #FFFFFF;
     border: 1px solid #000000;
     display: none;
+    overflow: scroll;
 }
 
-.post_options_container_open {
+.post_options_container_opened {
     position: absolute;
     text-align: left;
     padding: 5px;
     background-color: #FFFFFF;
     border: 1px solid #000000;
     display: block;
+    overflow: scroll;
 }
